--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="/src/assets/islandFavIcon.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Hotel Domki Pobierowo to idealne miejsce na wakacje nad morzem. Oferujemy luksusowe domki w malowniczej okolicy Pobierowa. Zaplanuj swoją wymarzoną wakacyjną podróż już teraz."
+    />
     <title>BB-Altic</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
